[svn r8159] redo script to avoid jaco usage